# bird_recognition_internship

./: README.md  model_v3.py  报告.md  训练结果统计表.xlsx
SOC_deployment/: README.md  说明.txt
SOC_deployment/generate_rknn_model/: 说明.txt
SOC_deployment/generate_rknn_model/datasets/: name.py
SOC_deployment/generate_rknn_model/datasets/ILSVRC2012_img_val_samples_my/: dataset_20.txt
SOC_deployment/generate_rknn_model/mobilenet/model/: MobileNetV3_Small.rknn  MobileNetV3_Small_5.5_4.4.rknn  MobileNetV3_Small_5.5_4.4_distortion.rknn  MobileNetV3_Small_5.5_4.4_normal.rknn  MobileNetV3_Small_distortion.rknn  bird_other.txt
SOC_deployment/generate_rknn_model/mobilenet/pictures/: 说明.txt
SOC_deployment/rknn_mobilenet/: build-linux_RV1106.sh  build-linux_RV1106_RGA.sh  commands.sh  commands_rga.sh
SOC_deployment/rknn_mobilenet/python/: jpg2yuv420p.py  width_height_to4.py
SOC_deployment/rknn_mobilenet/python_script/: rename.py
SOC_deployment/rknn_mobilenet/src/: CMakeLists.txt  inference.cpp  inference.h  main.cpp  read_yuv.cpp  read_yuv.h  save_ppm.cpp  save_ppm.h  yuv_to_rgb.cpp  yuv_to_rgb.h
SOC_deployment/rknn_mobilenet/src_rga/: CMakeLists.txt  inference.cpp  inference.h  main.cpp  read_yuv.cpp  rga_crop_rgb.cpp  rga_resize_yuv.cpp  rga_yuv_to_rgb.cpp  rgb.h  utils.cpp  yuv.h
latest_train8_20_distortion/: extract_visualize.py  save_as_onnx.py  train_origin.py  说明.txt
model_training_files/: extract_visualize.py  parameter.py  save_as_onnx.py  train.py  train_origin.py  visualize.py  说明.txt
model_training_files_distortion/: parameter.py  train.py  visualize.py
(+6 files in other folders)
